--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="lib/p5.min.js"></script>
     <script src="lib/jquery-1.10.1.js"></script>
     <script src="lib/webL10n.js"></script>
-
+    <script src="lib/jquery.couch.js"></script>
     <link rel="prefetch" type="application/l10n" href="./localization.ini" />
     <script data-main="js/loader" src="lib/require.js"> </script>
 
